# aacr_abstract

./: .gitattributes  .gitignore  README.md  app.py  pyproject.toml
data/vector/store/: aacr_metas.csv  aacr_metas.pkl  abstract_vec.npy  title_vec.npy
resources/: tag_vector.pickle
src/: utils.py
tests/: test_utils.py
